:memo: Add model id with placeholder